# api/controllers/listar.js
@@ -1,23 +1,21 @@
 const tarefaModel = require('../../db/tarefaModels');
 
 exports.listar = async (req, res) => {
-    // #swagger.tags = ['Listar']
+    // #swagger.tags = ['Usuario']
       // #swagger.description = 'buscar cliente'
-  
-      /*
-          #swagger.parameters['get_cliente' = {
-              in: 'body',
-              description: 'information',
-              required: true,
-              schema: {$ref: "#/definitions/get_cliente"}
-          }]
-       */
           const listar = await tarefaModel.listar();
+          try{
+            return res.status(201).json(data={
+              status:'sucesso',
+              message:"Listagem realizada",
+              data:listar
+          });
+          }catch{
+            return res.status(404).json(data={
+              message:"error"
+          });
+          }
   
-          return res.status(201).json(data={
-            status:'sucesso',
-            message:"Listagem realizada",
-            data:listar
-        });
+          
         
           };
